examples/test/testpolicy19720.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19720
  namespace: namespace85
spec:
  podSelector:
    matchLabels:
      key28: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value8
          key2: value39
      podSelector:
        matchLabels:
          key23: value23
          key28: value35
